--- a/Configurazione_Prusaslicer/PrusaSlicer_config_deltacomb_DC-20.ini
+++ b/Configurazione_Prusaslicer/PrusaSlicer_config_deltacomb_DC-20.ini
@@ -706,16 +706,16 @@ start_filament_gcode = "M900 K{if printer_notes=~/.*PRINTER_MODEL_MINI.*/ and no
 temperature = 210
 
 [printer:Deltacomb DC-20]
-bed_custom_model = /home/maurizio/Desktop/DC20/deltacomb_dc20.stl
-bed_custom_texture = 
+bed_custom_model =
+bed_custom_texture =
 bed_shape = 94.6385x8.2798,93.5567x16.4966,91.763x24.5878,89.2708x32.4919,86.0992x40.1487,82.2724x47.5,77.8194x54.4898,72.7742x61.0648,67.1751x67.1751,61.0648x72.7742,54.4898x77.8194,47.5x82.2724,40.1487x86.0992,32.4919x89.2708,24.5878x91.763,16.4966x93.5567,8.2798x94.6385,5.81707e-15x95,-8.2798x94.6385,-16.4966x93.5567,-24.5878x91.763,-32.4919x89.2708,-40.1487x86.0992,-47.5x82.2724,-54.4898x77.8194,-61.0648x72.7742,-67.1751x67.1751,-72.7742x61.0648,-77.8194x54.4898,-82.2724x47.5,-86.0992x40.1487,-89.2708x32.4919,-91.763x24.5878,-93.5567x16.4966,-94.6385x8.2798,-95x1.16341e-14,-94.6385x-8.2798,-93.5567x-16.4966,-91.763x-24.5878,-89.2708x-32.4919,-86.0992x-40.1487,-82.2724x-47.5,-77.8194x-54.4898,-72.7742x-61.0648,-67.1751x-67.1751,-61.0648x-72.7742,-54.4898x-77.8194,-47.5x-82.2724,-40.1487x-86.0992,-32.4919x-89.2708,-24.5878x-91.763,-16.4966x-93.5567,-8.2798x-94.6385,-1.74512e-14x-95,8.2798x-94.6385,16.4966x-93.5567,24.5878x-91.763,32.4919x-89.2708,40.1487x-86.0992,47.5x-82.2724,54.4898x-77.8194,61.0648x-72.7742,67.1751x-67.1751,72.7742x-61.0648,77.8194x-54.4898,82.2724x-47.5,86.0992x-40.1487,89.2708x-32.4919,91.763x-24.5878,93.5567x-16.4966,94.6385x-8.2798,95x-2.32683e-14
-before_layer_gcode = 
-between_objects_gcode = 
+before_layer_gcode =
+between_objects_gcode =
 color_change_gcode = M600
 cooling_tube_length = 5
 cooling_tube_retraction = 91.5
-default_filament_profile = 
-default_print_profile = 
+default_filament_profile =
+default_print_profile =
 deretract_speed = 0
 end_gcode = ;---------------------------------------\n;Deltacomb end script\n;---------------------------------------\nG91 ;relative positioning\nG1 F15000 X8.0 E-4.5 ;Wipe filament+material retraction\nG1 F15000 E4.0 Z1 ;Retraction compensation\nG28 ;Home all axes (max endstops)\nM84 ;steppers off\n
 extra_loading_move = -2
@@ -724,8 +724,8 @@ extruder_offset = 0x0
 gcode_flavor = marlin
 high_current_on_filament_swap = 0
 host_type = octoprint
-inherits = 
-layer_gcode = 
+inherits =
+layer_gcode =
 machine_limits_usage = emit_to_gcode
 machine_max_acceleration_e = 5000,5000
 machine_max_acceleration_extruding = 1250,1250
@@ -750,15 +750,15 @@ min_layer_height = 0.05
 nozzle_diameter = 0.4
 parking_pos_retraction = 92
 pause_print_gcode = M601
-print_host = 
-printer_model = 
-printer_notes = 
-printer_settings_id = 
+print_host =
+printer_model =
+printer_notes =
+printer_settings_id =
 printer_technology = FFF
-printer_variant = 
-printer_vendor = 
-printhost_apikey = 
-printhost_cafile = 
+printer_variant =
+printer_vendor =
+printhost_apikey =
+printhost_cafile =
 remaining_times = 1
 retract_before_travel = 1
 retract_before_wipe = 0%
@@ -773,11 +773,11 @@ retract_restart_extra_toolchange = 0
 retract_speed = 35
 silent_mode = 0
 single_extruder_multi_material = 0
-start_gcode = ;---------------------------------------\n;Deltacomb start script\n;---------------------------------------\nG21 ;metric values\nG90 ;absolute positioning\nM107 ;start with the fan off\nG28 ;Home all axes (max endstops)\nG92 E0 ;zero the extruded length\nG1 Z15.0 F9000 ;move to the platform down 15mm\nG1 F9000\n\n;Put printing message on LCD screen\nM117 Printing...\n;---------------------------------------
-template_custom_gcode = 
-thumbnails = 
+start_gcode = ;---------------------------------------\n;Deltacomb start script\n;---------------------------------------\nG21 ;metric values\nG90 ;absolute positioning\nM107 ;start with the fan off\nG28 ;Home all axes (max endstops)\nM420 S1; Bed Level Enable\nG92 E0 ;zero the extruded length\nG1 Z15.0 F9000 ;move to the platform down 15mm\nG1 F9000\nM140 S[first_layer_bed_temperature] ; set bed temp\nM190 S[first_layer_bed_temperature] ; wait for bed temp\n;Put printing message on LCD screen\nM117 In stampa...\n;---------------------------------------
+template_custom_gcode =
+thumbnails =
 thumbnails_format = PNG
-toolchange_gcode = 
+toolchange_gcode =
 use_firmware_retraction = 0
 use_relative_e_distances = 0
 use_volumetric_e = 0
